  fault since several releases.
* [nt]roff: Formatting of a ".char" object immediately before a trap is
  executed no longer causes pending input text to disappear (bug reported
  by Sebastian Leusch).
* troff: The escape sequence form "\s[+-]'n'" now works with fractional
  point sizes.
* troff: With xflag 0, fractional parts and units are now ignored with
  the ".ps" command.
* [nt]roff: The distance to the next trap, and, accordingly, the "\n(.t"
  register, can now be larger than the maximum allowed motion with "\h"
  and "\v". This allows very long pages without a "trap botch" error,
  although vertical motions on such pages may require multiple "\v"
  commands.
* [nt]roff: The "\n(.S" predefined number register has been removed again
  since it conflicts with use of this name by "dot -Tpic". (The "\n[.tabs]"
  register continues to be available with the same semantics.)
* troff: There is now a "lc_ctype" keyword in the DESC file for the sake
  of legacy post-processors that do not understand "x X LC_CTYPE".
* dpost: Use the device given by "x T" in intermediate language for reading
  font files only if its name starts with "ps" or if it has the "afmfonts"
  keyword in its DESC file; otherwise use "devpost".

Release 060813
* [nt]roff: A new type of traps is available: output-line traps. They are
  set with the new "\P" escape sequence and are invoked when the line that
  contains the corresponding sequence has been output.
* [nt]roff: The ".index" request has been added to determine the position
  of a string within a string or macro.
* [nt]roff: Floating-point registers have been introduced; they can be
  created and modified with the ".nrf" request and are otherwise like
  standard integer number registers, with which they share a common name
  space.
* [nt]roff: The ".if f expr" condition has been introduced to evaluate
  an expression with floating-point computation.
* [nt]roff: Exponential notation, as in "1e+10", is now supported in