@@ -28,6 +28,12 @@ Release ...
   point sizes.
 * troff: With xflag 0, fractional parts and units are now ignored with
   the ".ps" command.
+* [nt]roff: With xflag 0, ".if !..." works correctly again.
+* [nt]roff: When copying text to a macro, if a line appeared that was a
+  prefix of the terminating macro, its last character was copied twice
+  (e.g. "..." with the standard ".." was copied as "...."). This has been
+  fixed.
+* -me macros: The macros now work with xflag > 0.
 * [nt]roff: The distance to the next trap, and, accordingly, the "\n(.t"
   register, can now be larger than the maximum allowed motion with "\h"
   and "\v". This allows very long pages without a "trap botch" error,
